# rag-system-demo

./: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  DEBUGGING_GUIDE.md  Dockerfile  KNOWN_ISSUES.md  README.md  alembic.ini  architecture.md  docker-compose.yml  main.py  pyproject.toml  tasks.md  user-stories.md
alembic/: env.py
alembic/versions/: cf51b68c028e_initial_schema_with_documents_chunks_.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatInterface.jsx  DocumentList.jsx  DocumentUpload.jsx
frontend/src/services/: api.js
openspec/changes/fix-document-deletion/: design.md  proposal.md  tasks.md
openspec/changes/fix-document-deletion/specs/document-deletion/: spec.md
scripts/: dev.sh  init_db.sh  start.sh
src/: main.py
src/api/: dependencies.py  middleware.py  schemas.py
src/api/routes/: documents.py  health.py  query.py
src/core/: config.py  prompts.py
src/models/: __init__.py  chunk.py  document.py  query_log.py
src/repositories/: base.py  document_repo.py  query_log_repo.py  vector_repo.py
src/services/: chunking_service.py  embedding_service.py  llm_service.py  pdf_service.py  rag_service.py  retrieval_service.py
src/utils/: exceptions.py  text_processing.py  validators.py
tests/integration/: conftest.py  test_documents_delete.py  test_health.py
tests/unit/: test_config.py
tests/unit/test_core/: test_prompts.py
tests/unit/test_models/: test_chunk.py  test_document.py  test_query_log.py
tests/unit/test_services/: test_chunking_service.py  test_embedding_service.py  test_llm_service.py  test_pdf_service.py  test_rag_service.py  test_retrieval_service.py
tests/unit/test_utils/: test_exceptions.py  test_text_processing.py  test_validators.py
